1996-11-26  Thomas E. Dickey  <dickey@clark.net>

	* config.guess: RCS_BASE

1996-11-22  Thomas E. Dickey  <dickey@clark.net>

	* config.sub: RCS_BASE

1995-08-23  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_POPEN_TEST, AcSplit/CF_YACC_ERROR: RCS_BASE

	* AcSplit/CF_POPEN_TEST, AcSplit/CF_YACC_ERROR:
	ci-aclocal generated header
