@@ -1,3 +1,7 @@
+1997-03-11  Thomas E. Dickey  <dickey@clark.net>
+
+	* install.sh: RCS_BASE
+
 1996-11-26  Thomas E. Dickey  <dickey@clark.net>
 
 	* config.guess: RCS_BASE
